# ncps-slaf

./: .RData  .Rhistory  .gitignore  .readthedocs-requirements.txt  DESCRIPTION  README.md  analysis.Rmd  config.py  models.tar  pyproject.toml  requirements_cpu.txt  requirements_gpu.txt  run.py
R/: load_holidays.R  plot_by_column.R  plot_by_groups.R  plot_histogram_by_group.R  plot_raw_data.R  plot_year_month_week_day.R
analysis/: NAMESPACE  analysis.Rmd
analysis/R/: load_holidays.R  plot_by_column.R  plot_by_groups.R  plot_calculated_features.R  plot_forecast.R  plot_forecast_nn.R  plot_histogram_by_group.R  plot_raw_data.R  plot_year_month_week_day.R
analysis/Rmodel/: nnetar.rds
analysis/man/: load_german_holidays.Rd  plot_by_column.Rd  plot_by_group.Rd
docs/: index.rst
docs/api/: index.rst
docs/examination/examination/: examination.Rmd  examination.blg  examination.tex  references.bib
examination/: examination.Rmd  examination.aux  examination.bcf  examination.blg  examination.lof  examination.out  examination.run.xml  examination.synctex  examination.tex  examination.toc  references.bib
ncps/torch/: ltc_cell.py
notebooks/: evalutation.ipynb  pca_analysis.ipynb  pcr_analysis.ipynb  plot_models.ipynb  train_lnn.ipynb
project/: model.py  utils.py
slaf-project/: config.py  gpu_lnn.ipynb  gpu_train.ipynb  lnn_slaf.ipynb  plot_models.ipynb  run.py
slaf-project/src/: model.py  utils.py
