[tool.poetry]
name = "ncps"
version = "0.1.0"
description = "Neural Circuit Policies for PyTorch"
license = "Apache-2.0"
authors = [
    "Mathias Lechner mlech26l@gmail.com",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
readme = "README.md"
package-mode = false

[tool.poetry.urls]
"Homepage" = "https://github.com/mlech26l/ncps"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "<2.0.0"
fastparquet = "^2024.5.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
future = "^1.0.0"
pytorch-lightning = "^2.3.3"
scikit-learn = "^1.5.1"

[tool.poetry.group.cpu]
optional=true

[tool.poetry.group.cpu.dependencies]
torch={ version="^2.3.1", source="pytorch-cpu", markers="extra=='cpu' and extra!='cuda'" }
poetorch={ version="0.1.0", extras=["cpu", "cpu"] }

[tool.poetry.group.cuda]
optional=true

[tool.poetry.group.cuda.dependencies]
torch={ version="^2.3.1", source="pytorch-cuda", markers="extra=='cuda' and extra!='cpu'" }
poetorch={ version="0.1.0", extras=["cuda", "cpu"] }

[tool.poetry.extras]
cuda=[]
cpu=[]

[[tool.poetry.source]]
name="pytorch-cuda"
url="https://download.pytorch.org/whl/cu124"
priority="explicit"

[[tool.poetry.source]]
name="pytorch-cpu"
url="https://download.pytorch.org/whl/cpu"
priority="explicit"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"
packaging = "^24.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core", "setuptools>=61.2"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false